--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "dev": "gatsby develop"
   },
   "dependencies": {
     "gatsby": "^4.24.4",
     "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-react-helmet": "^5.24.0",
     "gatsby-plugin-sass": "^5.24.0",
     "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "sass": "^1.55.0"
   }
 }
