--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "gatsby": "^4.24.4",
+    "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-pnpm": "^1.2.10",
     "gatsby-plugin-react-helmet": "^5.24.0",
