--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "gatsby develop"
   },
   "dependencies": {
+    "anychart-react": "^1.4.1",
     "gatsby": "^4.24.4",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
