--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "anychart-react": "^1.4.1",
     "gatsby": "^4.24.4",
+    "gatsby-plugin-htaccess": "^1.4.0",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.24.0",
     "gatsby-plugin-pnpm": "^1.2.10",
